# rust_rlfm

./: .gitignore  Cargo.toml  README.md  main.rs
rlfm/: Cargo.toml
rlfm/src/: bwt.rs  main.rs
src/: bwt.rs  lib.rs  main.rs
tests/: test_bwt_search.rs
