[package]
name = "rlfm"
version = "0.1.0"
authors = ["Emmet Murray <e.minor.murray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[build]
#rustflags = []  # custom flags to pass to all compiler invocations
